[gd_scene load_steps=9 format=2]

[ext_resource path="res://Workday.gd" type="Script" id=1]
[ext_resource path="res://Message.tscn" type="PackedScene" id=2]
[ext_resource path="res://MessageBG1.png" type="Texture" id=3]
[ext_resource path="res://logo_theme.tres" type="Theme" id=4]
[ext_resource path="res://message_theme.tres" type="Theme" id=5]
[ext_resource path="res://OpenSans-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 35
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 70
use_filter = true
font_data = ExtResource( 6 )

[node name="Game" type="Control" groups=[
"Workday",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageArea" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sidebar" type="Control" parent="."]
margin_left = 24.0
margin_top = 32.0
margin_right = 296.0
margin_bottom = 704.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Sidebar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 80.0
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Label" parent="Sidebar/NinePatchRect"]
margin_top = -88.0
margin_right = 272.0
margin_bottom = 13.0
theme = ExtResource( 4 )
text = "Birdnet"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Sidebar/NinePatchRect"]
margin_left = 16.0
margin_top = 13.0
margin_right = 256.0
margin_bottom = 584.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblStrikecounter" type="Label" parent="Sidebar/NinePatchRect/VBoxContainer"]
margin_right = 240.0
margin_bottom = 55.0
text = "Strikes:"

[node name="LblRevisionsText" type="Label" parent="Sidebar/NinePatchRect/VBoxContainer"]
margin_top = 59.0
margin_right = 240.0
margin_bottom = 114.0
text = "Revisions:"

[node name="LblRevisionsCounter" type="Label" parent="Sidebar/NinePatchRect/VBoxContainer"]
margin_top = 118.0
margin_right = 240.0
margin_bottom = 173.0
text = "88/88"
align = 2

[node name="LblRevisionsDone" type="Label" parent="Sidebar/NinePatchRect/VBoxContainer"]
margin_top = 177.0
margin_right = 240.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.113725, 0.631373, 0.94902, 1 )
text = "done"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblTime" type="Label" parent="Sidebar/NinePatchRect"]
margin_left = 16.0
margin_top = 456.0
margin_right = 256.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "12 pm"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlBox" type="HBoxContainer" parent="Sidebar"]
margin_left = 304.0
margin_top = 560.0
margin_right = 1216.0
margin_bottom = 664.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnDelete" type="Button" parent="Sidebar/ControlBox"]
margin_right = 293.0
margin_bottom = 104.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Delete"

[node name="BtnBan" type="Button" parent="Sidebar/ControlBox"]
margin_left = 309.0
margin_right = 602.0
margin_bottom = 104.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Ban User"

[node name="BtnPass" type="Button" parent="Sidebar/ControlBox"]
margin_left = 618.0
margin_right = 912.0
margin_bottom = 104.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "Pass"

[node name="Message" parent="." instance=ExtResource( 2 )]

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="HourTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="pressed" from="Sidebar/ControlBox/BtnDelete" to="." method="_on_BtnDelete_pressed"]
[connection signal="pressed" from="Sidebar/ControlBox/BtnPass" to="." method="_on_BtnPass_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="HourTimer" to="." method="_on_HourTimer_timeout"]
